--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,9 +1,17 @@
 add_avr_executable(
-	register
-	register/main.cpp
+    register
+    register/main.cpp
 )
 
 add_avr_executable(
-	digitalPin
-	digitalPin/main.cpp
+    digitalPin
+    digitalPin/main.cpp
+)
+add_avr_executable(
+        timer
+        timer/main.cpp
+)
+add_avr_executable(
+        c_timer
+        timer/main.c
 )
