--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,23 +1,3 @@
-add_avr_executable(
-	register
-	register/main.cpp
-)
-
-add_avr_executable(
-	digitalPin
-	digitalPin/main.cpp
-)
-add_avr_executable(
-	timer
-	timer/main.cpp
-)
-
-add_avr_executable(
-	c_timer
-	timer/main.c
-)
-
-add_avr_executable(
-	zol_elf
-	zol/main.cpp
-)
+add_subdirectory(register)
+add_subdirectory(digitalPin)
+add_subdirectory(timer)
