--- a/app/timer/CMakeLists.txt
+++ b/app/timer/CMakeLists.txt
@@ -3,7 +3,17 @@ add_zol_executable(
 	main.cpp
 )
 
+add_zol_executable(
+	chrono
+	chrono.cpp
+)
+
 add_avr_executable(
 	c_timer
 	main.c
+)
+
+add_avr_executable(
+	c_chrono
+	chrono.c
 )
