TimedTask and Custom Timed Task
TimedTask works but is not zero overhead and cannot be made zero
overhead because of a compiler bug.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(register)
 add_subdirectory(digitalPin)
 add_subdirectory(timer)
 add_subdirectory(task)
+add_subdirectory(custom_timed_task)
