--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,5 +1,4 @@
-add_subdirectory(register)
-add_subdirectory(digitalPin)
-add_subdirectory(timer)
-add_subdirectory(task)
-add_subdirectory(custom_timed_task)
+add_zol_executable(
+	app
+	main.cpp
+)
